--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -66,6 +66,27 @@
     <ClCompile Include="UVaOJ\128.cpp">
       <Filter>UVaOJ\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVaOJ\129.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\130.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\136.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\133.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\138.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\141.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Programming Contests\UVa OJ\144.cpp">
+      <Filter>UVaOJ\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\bits\stdc++.h">
